@@ -1,3 +1,9 @@
+2004-07-13  Robert Millan  <robertmh@gnu.org>
+
+	* lib-link.m4 (AC_LIB_LINKFLAGS_BODY): Same /usr/local/include handling
+	on Hurd and on GNU/k*BSD as on Linux.
+	* lib-prefix.m4 (AC_LIB_PREFIX): Likewise.
+
 2004-01-29  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.14.1 released.
